# tifsep

./: .gitignore  Cargo.toml  README.md
src/: client.rs  engines.rs  helpers.rs  main.rs  rocket_requests.rs  static_files.rs  tsclient.rs  utils.rs
src/engines/: bing.rs  brave.rs  brave_example.html  brave_example.prettified.html  brave_required_matches.md  duckduckgo.rs  duckduckgo_example.html  engine_base.rs
src/html/: beginning.html  end.html
src/public/css/: finished.css  style.css
src/public/html/: beginning.html  end.html  frontpage.html  result.html
tailwindcss/: fake.html  output.css  package-lock.json  package.json
